Expand SimplePolygonShapeXZ hierarchy with RectangleXZ